# Hamilton

./: LICENSE  README.md  dune-project  hamilton.opam
lib/: dual.ml  dual.mli  dualcomplex.ml  dualcomplex.mli  dualquaternion.ml  dualquaternion.mli  dune  quaternion.ml  quaternion.mli
test/: dual.ml  dualcomplex.ml  dualquaternion.ml  dune  quaternion.ml  test_hamilton.ml
