(lang dune 3.8)

(name hamilton)

(generate_opam_files true)

(source
 (github JoanAguilar/Hamilton))

(authors "Joan Aguilar Mayans")

(maintainers "Joan Aguilar Mayans")

(license MIT)

(package
 (name hamilton)
 (synopsis "Modules for basic operations with real numbers extensions.")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
